--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
 <html>
-Those who can imagine anything, can create the impossible.
+	<body>
+		<center>
+			<img src="./turing.jpg" width="250" height="350" /> <br>
+			<cite>Those who can imagine anything, can create the impossible.</cite>
+		</center>
+	</body>
 </html>
