--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+	<head>
+		<title>Edoardo Di Paolo</title>
+	</head>
 	<body>
 		<center>
 			<img src="./turing.jpg" width="250" height="350" /> <br>
