--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	</head>
 	<body>
 		<center>
-			<img src="./turing.jpg" width="250" height="350" /> <br>
+			<img alt="Alan Turing" src="./turing.jpg" width="250" height="350" /> <br>
 			<cite>Those who can imagine anything, can create the impossible.</cite>
 		</center>
 	</body>
